test/functional/failtests/multipleMembers.txt
SyntaxError: Class "foo" cannot declare "x" more than once.
2 |     int:x;
3 |     int:x;
  |     ^ (3:5)
4 | }

